--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -62,6 +62,7 @@
 		<bouncycastle.version>1.47</bouncycastle.version>
 		<bsh.version>2.0b4</bsh.version>
 		<c3p0.version>0.9.5.2</c3p0.version>
+		<caffeine.version>2.2.0</caffeine.version>
 		<cas-client.version>3.2.2</cas-client.version>
 		<castor.version>1.3.3</castor.version>
 		<commonj.version>1.1.1</commonj.version>
@@ -319,6 +320,11 @@
 				<groupId>com.esotericsoftware</groupId>
 				<artifactId>kryo-shaded</artifactId>
 				<version>${kryo.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.ben-manes.caffeine</groupId>
+				<artifactId>caffeine</artifactId>
+				<version>${caffeine.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.fge</groupId>
