--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -49,7 +49,7 @@
 		<spring-integration-java-dsl.version>1.1.2.RELEASE</spring-integration-java-dsl.version>
 		<spring-integration-kafka.version>1.3.0.RELEASE</spring-integration-kafka.version>
 		<spring-integration-splunk.version>1.1.0.RELEASE</spring-integration-splunk.version>
-		<spring-ldap.version>2.0.4.RELEASE</spring-ldap.version>
+		<spring-ldap.version>2.1.0.BUILD-SNAPSHOT</spring-ldap.version>
 		<spring-web-flow.version>2.4.2.RELEASE</spring-web-flow.version>
 		<spring-web-services.version>${spring-ws.version}</spring-web-services.version>
 
@@ -151,7 +151,6 @@
 		<protobuf-java-format.version>1.2</protobuf-java-format.version>
 		<quartz.version>2.2.2</quartz.version>
 		<querydsl.version>4.0.8</querydsl.version>
-		<querydsl3.version>3.6.9</querydsl3.version>
 		<rabbit-amqp-client.version>3.6.0</rabbit-amqp-client.version>
 		<rabbit-http-client.version>1.0.0.RELEASE</rabbit-http-client.version>
 		<reactive-streams.version>1.0.0</reactive-streams.version>
@@ -397,11 +396,6 @@
 				<groupId>com.mchange</groupId>
 				<artifactId>c3p0</artifactId>
 				<version>${c3p0.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.mysema.querydsl</groupId>
-				<artifactId>querydsl-apt</artifactId>
-				<version>${querydsl3.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.querydsl</groupId>
