--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -308,7 +308,7 @@ platform_definition:
         - spring-integration-splunk
     - name: Spring LDAP
       groupId: org.springframework.ldap
-      version: 2.0.4.RELEASE
+      version: 2.1.0.BUILD-SNAPSHOT
       build:
         repository: https://github.com/spring-projects/spring-ldap
         tagPrefix:
