--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -66,7 +66,6 @@
 		<castor.version>1.3.3</castor.version>
 		<commonj.version>1.1.1</commonj.version>
 		<commons-cli.version>1.2</commons-cli.version>
-		<commons-codec.version>1.10</commons-codec.version>
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 		<commons-io.version>2.4</commons-io.version>
 		<commons-httpclient.version>3.1</commons-httpclient.version>
@@ -88,7 +87,6 @@
 		<hbase.version>0.96.2-hadoop2</hbase.version>
 		<hessian.version>4.0.38</hessian.version>
 		<hive.version>0.12.0</hive.version>
-		<htmlunit.version>2.18</htmlunit.version>
 		<ibatis-sqlmap.version>2.3.4.726</ibatis-sqlmap.version>
 		<itext.version>2.1.7</itext.version>
 		<jackson1.version>1.9.13</jackson1.version>
@@ -138,7 +136,6 @@
 		<openjpa.version>2.3.0</openjpa.version>
 		<neo4j.version>2.3.2</neo4j.version>
 		<neo4j-cypher-dsl.version>2.0.1</neo4j-cypher-dsl.version>
-		<neo4j-ogm.version>2.0.0-M04</neo4j-ogm.version>
 		<neo4j-spatial.version>0.12-neo4j-2.0.1</neo4j-spatial.version>
 		<netty.version>4.0.34.Final</netty.version>
 		<objenesis.version>2.1</objenesis.version>
@@ -156,7 +153,7 @@
 		<reactive-streams.version>1.0.0</reactive-streams.version>
 		<rest-assured.version>2.8.0</rest-assured.version>
 		<rometools.version>1.5.1</rometools.version>
-		<selenium-htmlunit-driver.version>2.46.0</selenium-htmlunit-driver.version>
+		<selenium-htmlunit-driver.version>${selenium.version}</selenium-htmlunit-driver.version>
 		<smack.version>3.2.1</smack.version>
 		<smack4.version>4.1.5</smack4.version>
 		<snappy.version>1.1.2.1</snappy.version>
@@ -508,11 +505,6 @@
 				<version>${commons-cli.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>commons-codec</groupId>
-				<artifactId>commons-codec</artifactId>
-				<version>${commons-codec.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>commons-fileupload</groupId>
 				<artifactId>commons-fileupload</artifactId>
 				<version>${commons-fileupload.version}</version>
@@ -676,11 +668,6 @@
 				<groupId>net.openhft</groupId>
 				<artifactId>lang</artifactId>
 				<version>${openhft-lang.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>net.sourceforge.htmlunit</groupId>
-				<artifactId>htmlunit</artifactId>
-				<version>${htmlunit.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>net.sf.jasperreports</groupId>
@@ -1038,16 +1025,6 @@
 				<version>${jruby.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.neo4j</groupId>
-				<artifactId>neo4j-ogm-http-driver</artifactId>
-				<version>${neo4j-ogm.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.neo4j</groupId>
-				<artifactId>neo4j-ogm-core</artifactId>
-				<version>${neo4j-ogm.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>org.objenesis</groupId>
 				<artifactId>objenesis</artifactId>
 				<version>${objenesis.version}</version>
@@ -1066,11 +1043,6 @@
 				<groupId>org.reactivestreams</groupId>
 				<artifactId>reactive-streams</artifactId>
 				<version>${reactive-streams.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.seleniumhq.selenium</groupId>
-				<artifactId>selenium-htmlunit-driver</artifactId>
-				<version>${selenium-htmlunit-driver.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.testng</groupId>
