--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -131,6 +131,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<myfaces.version>2.1.17</myfaces.version>
 		<okhttp.version>2.3.0</okhttp.version>
+		<okhttp3.version>3.2.0</okhttp3.version>
 		<openhft-chronicle.version>3.4.4</openhft-chronicle.version>
 		<openhft-lang.version>6.6.16</openhft-lang.version>
 		<openjpa.version>2.3.0</openjpa.version>
@@ -448,6 +449,11 @@
 				<groupId>com.squareup.okhttp</groupId>
 				<artifactId>okhttp</artifactId>
 				<version>${okhttp.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.squareup.okhttp3</groupId>
+				<artifactId>okhttp</artifactId>
+				<version>${okhttp3.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.sun</groupId>
