Align with latest Spring Boot 1.4 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -476,7 +476,9 @@ platform_definition:
       - 'ch.qos.logback:logback-core'
       - 'com.datastax.cassandra:cassandra-driver-core'
       - 'com.datastax.cassandra:cassandra-driver-mapping'
+      - 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
+      - 'com.fasterxml.jackson.dataformat:jackson-dataformat-smile'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
       - 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
       - 'com.fasterxml.jackson.datatype:jackson-datatype-guava'
