Add dependency management for com.unboundid:unboundid-ldapsdk
It will be used by Spring LDAP 2.1.

Closes gh-336

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -492,6 +492,7 @@ platform_definition:
       - 'com.google.appengine:appengine-api-1.0-sdk'
       - 'com.hazelcast:hazelcast-hibernate4'
       - 'com.jayway.jsonpath:json-path-assert'
+      - 'com.unboundid:unboundid-ldapsdk'
       - 'com.zaxxer:HikariCP'
       - 'io.dropwizard.metrics:metrics-ganglia'
       - 'io.dropwizard.metrics:metrics-graphite'
