--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -168,6 +168,7 @@
 		<tiles-request.version>1.0.6</tiles-request.version>
 		<tyrus.version>1.3.5</tyrus.version>
 		<typica.version>1.3</typica.version>
+		<unboundid.version>3.1.1</unboundid.version>
 		<velocity-tools-view.version>1.4</velocity-tools-view.version>
 		<webjars-json-editor.version>0.7.21</webjars-json-editor.version>
 		<websphere-uow.version>6.0.2.17</websphere-uow.version>
@@ -492,6 +493,11 @@
 				<groupId>com.thoughtworks.xstream</groupId>
 				<artifactId>xstream</artifactId>
 				<version>${xstream.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.unboundid</groupId>
+				<artifactId>unboundid-ldapsdk</artifactId>
+				<version>${unboundid.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.yammer.metrics</groupId>
