--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -425,7 +425,7 @@ platform_definition:
         - spring-social-twitter
     - name: Spring Web Flow
       groupId: org.springframework.webflow
-      version: 2.4.2.RELEASE
+      version: 2.4.3.BUILD-SNAPSHOT
       build:
         repository: https://github.com/spring-projects/spring-webflow
       modules:
