--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -238,7 +238,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.3.0.M1
+      version: 4.3.0.BUILD-SNAPSHOT
       build:
         compileWith: jdk8
         runTestsWith:
