--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -202,7 +202,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.2.5.RELEASE
+      version: 4.2.6.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
