--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -58,7 +58,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.3.4.BUILD-SNAPSHOT
+      version: 1.3.4.RELEASE
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -202,7 +202,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.2.6.BUILD-SNAPSHOT
+      version: 4.2.6.RELEASE
       modules:
         - spring-aop
         - spring-aspects
