--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -210,7 +210,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.0.BUILD-SNAPSHOT
+      version: 4.3.0.RC2
       modules:
         - spring-aop
         - spring-aspects
