--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -37,7 +37,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.6.0.M2
+      version: 1.6.0.RC1
       modules:
         - spring-amqp
         - spring-rabbit
