--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -384,7 +384,7 @@ platform_definition:
         - spring-security-oauth2
     - name: Spring Session
       groupId: org.springframework.session
-      version: 1.2.0.RC3
+      version: 1.2.0.RELEASE
       modules:
         - spring-session
         - spring-session-data-gemfire
