--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -43,6 +43,7 @@ platform_definition:
         - spring-rabbit
       build:
         repository: https://github.com/spring-projects/spring-amqp
+        tagPrefix:
     - name: Spring Batch
       groupId: org.springframework.batch
       version: 3.0.7.RELEASE
