Build Spring AMQP with Java 8
See https://jira.spring.io/browse/AMQP-611

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -42,6 +42,7 @@ platform_definition:
         - spring-amqp
         - spring-rabbit
       build:
+        compileWith: jdk8
         repository: https://github.com/spring-projects/spring-amqp
     - name: Spring Batch
       groupId: org.springframework.batch
