--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -242,7 +242,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.3.0.RC1
+      version: 4.3.0.RELEASE
       build:
         compileWith: jdk8
         runTestsWith:
@@ -593,7 +593,11 @@ platform_definition:
       - 'org.neo4j:neo4j-ogm-compiler'
       - 'org.postgresql:postgresql'
       - 'org.seleniumhq.selenium:selenium-api'
+      - 'org.seleniumhq.selenium:selenium-chrome-driver'
+      - 'org.seleniumhq.selenium:selenium-firefox-driver'
+      - 'org.seleniumhq.selenium:selenium-ie-driver'
       - 'org.seleniumhq.selenium:selenium-remote-driver'
+      - 'org.seleniumhq.selenium:selenium-safari-driver'
       - 'org.seleniumhq.selenium:selenium-support'
       - 'org.slf4j:slf4j-jdk14'
       - 'org.slf4j:slf4j-simple'
