--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -203,7 +203,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.2.6.RELEASE
+      version: 4.2.7.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
