Align with latest Spring Boot 1.4 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -583,6 +583,8 @@ platform_definition:
       - 'org.eclipse.jetty:jetty-security'
       - 'org.eclipse.jetty:jetty-xml'
       - 'org.ehcache:ehcache'
+      - 'org.ehcache:ehcache-clustered'
+      - 'org.ehcache:ehcache-transactions'
       - 'org.firebirdsql.jdbc:jaybird-jdk16'
       - 'org.firebirdsql.jdbc:jaybird-jdk17'
       - 'org.firebirdsql.jdbc:jaybird-jdk18'
