--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -213,7 +213,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.1.BUILD-SNAPSHOT
+      version: 4.3.1.RELEASE
       modules:
         - spring-aop
         - spring-aspects
