--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -59,7 +59,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.3.6.BUILD-SNAPSHOT
+      version: 1.3.6.RELEASE
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -203,7 +203,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.2.7.BUILD-SNAPSHOT
+      version: 4.2.7.RELEASE
       modules:
         - spring-aop
         - spring-aspects
