--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>io.spring.platform</groupId>
 	<artifactId>platform-build</artifactId>
-	<version>Athens.BUILD-SNAPSHOT</version>
+	<version>Athens-BUILD-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Spring IO Platform build</name>
 	<description>Spring IO Platform build</description>
