Upgrade to ejb-api 3.2
Closes gh-411

--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -95,7 +95,7 @@
 		<javax-batch.version>1.0.1</javax-batch.version>
 		<javax-cdi.version>1.2</javax-cdi.version>
 		<javax-connector.version>1.5</javax-connector.version>
-		<javax-ejb.version>3.0</javax-ejb.version>
+		<javax-ejb.version>3.2</javax-ejb.version>
 		<javax-el.version>2.2.5</javax-el.version>
 		<javax-enterprise-concurrent.version>1.0</javax-enterprise-concurrent.version>
 		<javax-faces.version>2.2</javax-faces.version>
@@ -562,7 +562,7 @@
 			</dependency>
 			<dependency>
 				<groupId>javax.ejb</groupId>
-				<artifactId>ejb-api</artifactId>
+				<artifactId>javax.ejb-api</artifactId>
 				<version>${javax-ejb.version}</version>
 			</dependency>
 			<dependency>
