Add dependency management for javax.interceptor-api
It was previously part of the EJB API jar but has been separated out
into its own artifact.

See gh-411

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -510,6 +510,7 @@ platform_definition:
       - 'io.dropwizard.metrics:metrics-ganglia'
       - 'io.dropwizard.metrics:metrics-graphite'
       - 'io.dropwizard.metrics:metrics-servlets'
+      - 'javax.interceptor:javax.interceptor-api'
       - 'javax.servlet:jstl'
       - 'mysql:mysql-connector-java'
       - 'net.java.dev.jna:jna'
