--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -100,6 +100,7 @@
 		<javax-enterprise-concurrent.version>1.0</javax-enterprise-concurrent.version>
 		<javax-faces.version>2.2</javax-faces.version>
 		<javax-inject.version>1</javax-inject.version>
+		<javax-interceptor.version>1.2</javax-interceptor.version>
 		<javax-jax-rs.version>2.0.1</javax-jax-rs.version>
 		<javax-jdo.version>3.0.1</javax-jdo.version>
 		<javax-jsp.version>2.3.1</javax-jsp.version>
@@ -589,6 +590,11 @@
 				<groupId>javax.inject</groupId>
 				<artifactId>javax.inject</artifactId>
 				<version>${javax-inject.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.interceptor</groupId>
+				<artifactId>javax.interceptor-api</artifactId>
+				<version>${javax-interceptor.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.jdo</groupId>
