--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -134,28 +134,28 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.3.4.RELEASE
+      version: 1.3.5.BUILD-SNAPSHOT
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.11.4.RELEASE
+      version: 1.11.5.BUILD-SNAPSHOT
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 1.4.4.RELEASE
+      version: 1.4.5.BUILD-SNAPSHOT
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 1.3.4.RELEASE
+      version: 1.3.5.BUILD-SNAPSHOT
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.7.4.RELEASE
+      version: 1.7.5.BUILD-SNAPSHOT
       modules:
         - spring-data-gemfire
       build:
@@ -163,17 +163,17 @@ platform_definition:
         tagPrefix:
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.9.4.RELEASE
+      version: 1.9.5.BUILD-SNAPSHOT
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.0.4.RELEASE
+      version: 1.0.5.BUILD-SNAPSHOT
       modules:
         - spring-data-keyvalue
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.8.4.RELEASE
+      version: 1.8.5.BUILD-SNAPSHOT
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -181,29 +181,29 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 3.4.4.RELEASE
+      version: 3.4.5.BUILD-SNAPSHOT
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.6.4.RELEASE
+      version: 1.6.5.BUILD-SNAPSHOT
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.4.4.RELEASE
+      version: 2.4.5.BUILD-SNAPSHOT
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 1.5.4.RELEASE
+      version: 1.5.5.BUILD-SNAPSHOT
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.2.8.BUILD-SNAPSHOT
+      version: 4.2.8.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -365,12 +365,12 @@ platform_definition:
         - spring-security-web
     - name: Spring Security JWT
       groupId: org.springframework.security
-      version: 1.0.4.RELEASE
+      version: 1.0.5.RELEASE
       modules:
        - spring-security-jwt
     - name: Spring Security OAuth
       groupId: org.springframework.security.oauth
-      version: 2.0.10.RELEASE
+      version: 2.0.11.RELEASE
       modules:
         - spring-security-oauth
         - spring-security-oauth2
@@ -449,6 +449,7 @@ platform_definition:
     'rome:rome': 'net.java.dev.rome:rome'
   missing_dependencies:
     ignored_dependencies:
+      - 'com.google.code.findbugs:annotations'
       - 'org.thymeleaf:thymeleaf-spring3' # The Platform is Spring 4+
       - 'org.springframework:spring-instrument-tomcat' # Only needed with Tomcat 6 and the Platform uses Tomcat 7+
       - 'org.springframework.boot:spring-boot-dependencies' # The platform bom is a superset of spring-boot-dependencies
