--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -134,28 +134,28 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.3.5.BUILD-SNAPSHOT
+      version: 1.3.5.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.11.5.BUILD-SNAPSHOT
+      version: 1.11.5.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 1.4.5.BUILD-SNAPSHOT
+      version: 1.4.5.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 1.3.5.BUILD-SNAPSHOT
+      version: 1.3.5.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.7.5.BUILD-SNAPSHOT
+      version: 1.7.5.RELEASE
       modules:
         - spring-data-gemfire
       build:
@@ -163,17 +163,17 @@ platform_definition:
         tagPrefix:
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.9.5.BUILD-SNAPSHOT
+      version: 1.9.5.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.0.5.BUILD-SNAPSHOT
+      version: 1.0.5.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.8.5.BUILD-SNAPSHOT
+      version: 1.8.5.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -181,24 +181,24 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 3.4.5.BUILD-SNAPSHOT
+      version: 3.4.5.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.6.5.BUILD-SNAPSHOT
+      version: 1.6.5.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.4.5.BUILD-SNAPSHOT
+      version: 2.4.5.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 1.5.5.BUILD-SNAPSHOT
+      version: 1.5.5.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
