--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -174,6 +174,7 @@
 		<wss4j.version>1.6.19</wss4j.version>
 		<wss4j2.version>2.1.6</wss4j2.version>
 		<xmlbeans.version>2.6.0</xmlbeans.version>
+		<xmlprojector.version>1.4.8</xmlprojector.version>
 		<xmlschema.version>2.2.1</xmlschema.version>
 		<xmlunit.version>1.6</xmlunit.version>
 		<xom.version>1.2.5</xom.version>
@@ -1024,6 +1025,11 @@
 				<groupId>org.xerial.snappy</groupId>
 				<artifactId>snappy-java</artifactId>
 				<version>${snappy.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.xmlbeam</groupId>
+				<artifactId>xmlprojector</artifactId>
+				<version>${xmlprojector.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.zeromq</groupId>
