--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -285,7 +285,7 @@ platform_definition:
         - spring-integration-flow
     - name: Spring Integration Java DSL
       groupId: org.springframework.integration
-      version: 1.1.3.RELEASE
+      version: 1.2.0.BUILD-SNAPSHOT
       build:
         repository: https://github.com/spring-projects/spring-integration-java-dsl
         compileWith: jdk8
