--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -307,6 +307,13 @@ platform_definition:
         directory: spring-integration-splunk
       modules:
         - spring-integration-splunk
+    - name: Spring Kafka
+      groupId: org.springframework.kafka
+      version: 1.1.0.RELEASE
+      modules:
+        - spring-kafka
+      build:
+        repository: https://github.com/spring-projects/spring-kafka
     - name: Spring LDAP
       groupId: org.springframework.ldap
       version: 2.1.0.RELEASE
